# gramshelf

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: android.yml  ci.yml  publish.yml
android/: .gitignore  README.md  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/xyz/tanzatech/gramshelf/: ApiClient.java  ConfigStore.java  DetailActivity.java  ImageLoader.java  MainActivity.java  Models.java  Ui.java
android/app/src/main/res/drawable/: ic_gramshelf.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/test/java/xyz/tanzatech/gramshelf/: ApiClientTest.java
android/gradle/wrapper/: gradle-wrapper.properties
docs/: API.md  TRUENAS.md
gramshelf/: __init__.py  __main__.py  app.py  config.py  database.py  importer.py  instagram.py  post_metadata.py  scheduler.py  schemas.py  security.py  sync.py
gramshelf/static/: app.css  app.js
gramshelf/templates/: activity.html  base.html  diagnostics.html  item.html  login.html  settings.html  setup.html  timeline.html
tests/: __init__.py  conftest.py  test_database.py  test_importer.py  test_instagram.py  test_security.py  test_sync.py  test_web_api.py
