[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "gramshelf"
version = "0.4.0"
description = "A small self-hosted archive for Instagram saved posts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GramShelf contributors" }]
keywords = ["instagram", "archive", "instaloader", "self-hosted"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "APScheduler>=3.11,<4",
  "fastapi>=0.139,<1",
  "instaloader>=4.15.2,<5",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.51,<1",
]

[project.optional-dependencies]
test = [
  "httpx2>=2.7,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
]

[project.scripts]
gramshelf = "gramshelf.__main__:main"

[project.urls]
Documentation = "https://github.com/tanzatechxyz/gramshelf#readme"
Issues = "https://github.com/tanzatechxyz/gramshelf/issues"
Source = "https://github.com/tanzatechxyz/gramshelf"

[tool.hatch.build.targets.wheel]
packages = ["gramshelf"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
